src/styles/Welcome.css
.Welcome {
  min-height: calc(100vh - 80px);
  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
    url('../assets/landview_wetsuits_edited.jpg');
  background-position: center;
  background-size: cover;
  background-attachment: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
}

.homeWrapper {
  width: 65%;
}

.welcome-login-text {
  font-size: 60px;
  font-family: 'Lato', sans-serif;
  color: white;
  padding: 20px;
}

.home-text {
  font-size: 25px;
  font-family: 'Lato', sans-serif;
  font-weight: 300;
  color: white;
  margin-bottom: 15%;
}

.buttonWrapper {
  display: flex;
  justify-content: center;
}

.featuresWrapper {
  display: flex;
  width: 100%;
  justify-content: center;
  margin: 80px auto;
}

.boxWrapper {
  display: inline-flex;
}

.oneBox {
  width: 300px;
  margin: 0 60px;
  text-align: center;
}

.oneBoxMobile {
  width: 300px;
  margin: 0;
  text-align: center;
}

.divider {
  border: solid 2px;
  width: 70px;
  margin: 25px auto;
  border-color: #939598;
}

